feat: new fee rules
